--- a/PenjatFirebase2/app/src/main/res/layout/fragment_penjat.xml
+++ b/PenjatFirebase2/app/src/main/res/layout/fragment_penjat.xml
@@ -9,13 +9,13 @@
         android:id="@+id/textUsuari"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginStart="74dp"
+        android:layout_marginStart="73dp"
         android:layout_marginTop="27dp"
-        android:layout_marginEnd="74dp"
-        android:layout_marginBottom="102dp"
+        android:layout_marginEnd="73dp"
+        android:layout_marginBottom="103dp"
         android:text="@string/usuari"
         android:textSize="30sp"
-        app:layout_constraintBottom_toTopOf="@+id/buttonN"
+        app:layout_constraintBottom_toTopOf="@+id/editpartida"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -33,23 +33,37 @@
 
     <Button
         android:id="@+id/buttonN"
-        android:layout_width="243dp"
+        android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginBottom="50dp"
+        android:layout_marginBottom="62dp"
         android:text="@string/PartidaN"
         app:layout_constraintBottom_toTopOf="@+id/buttonA"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textUsuari" />
+        app:layout_constraintEnd_toEndOf="@+id/buttonA"
+        app:layout_constraintStart_toStartOf="@+id/buttonTanca"
+        app:layout_constraintTop_toBottomOf="@+id/editpartida" />
 
     <Button
         android:id="@+id/buttonA"
         android:layout_width="245dp"
         android:layout_height="0dp"
-        android:layout_marginBottom="327dp"
+        android:layout_marginBottom="169dp"
         android:text="@string/PartidaA"
         app:layout_constraintBottom_toTopOf="@+id/buttonTanca"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/buttonN" />
+
+    <EditText
+        android:id="@+id/editpartida"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="96dp"
+        android:ems="10"
+        android:hint="@string/nom_partida"
+        android:inputType="textPersonName"
+        android:minHeight="48dp"
+        app:layout_constraintBottom_toTopOf="@+id/buttonN"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textUsuari" />
 </androidx.constraintlayout.widget.ConstraintLayout>
