--- a/PenjatFirebase2/app/src/main/res/layout/activity_joc.xml
+++ b/PenjatFirebase2/app/src/main/res/layout/activity_joc.xml
@@ -4,143 +4,147 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/background_green"
+    android:backgroundTint="@color/background_green"
     tools:context=".JocActivity">
 
     <Button
         android:id="@+id/buttonTanca2"
         android:layout_width="254dp"
         android:layout_height="67dp"
-        android:layout_marginBottom="36dp"
+        android:layout_marginStart="78dp"
+        android:layout_marginTop="75dp"
+        android:backgroundTint="@color/design_default_color_error"
         android:text="@string/tanca"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        android:textColor="@color/white"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/buttonEnvia" />
 
     <TextView
         android:id="@+id/acerts"
-        android:layout_width="0dp"
+        android:layout_width="100dp"
         android:layout_height="40dp"
-        android:layout_marginTop="102dp"
-        android:layout_marginEnd="102dp"
-        android:layout_marginBottom="101dp"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="14dp"
         android:textAlignment="center"
-        app:layout_constraintBottom_toTopOf="@+id/buttonEnvia"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:textColor="@color/white"
         app:layout_constraintStart_toEndOf="@+id/intents"
-        app:layout_constraintTop_toTopOf="@+id/textView10" />
+        app:layout_constraintTop_toBottomOf="@+id/textView6" />
 
     <Button
         android:id="@+id/buttonEnvia"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="71dp"
-        android:layout_marginTop="32dp"
-        android:layout_marginEnd="70dp"
+        android:layout_width="118dp"
+        android:layout_height="63dp"
+        android:layout_marginStart="146dp"
+        android:layout_marginTop="30dp"
+        android:backgroundTint="@color/background_ligth_green"
         android:text="@string/enviar"
-        app:layout_constraintEnd_toEndOf="@+id/acerts"
-        app:layout_constraintStart_toStartOf="@+id/buttonTanca2"
+        android:textColor="@color/white"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editLletra" />
 
     <TextView
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="2dp"
-        android:layout_marginTop="84dp"
+        android:layout_marginStart="96dp"
+        android:layout_marginTop="15dp"
         android:text="@string/intents"
-        app:layout_constraintStart_toStartOf="@+id/intents"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+        android:textColor="@color/white"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/paraulatext" />
 
     <TextView
         android:id="@+id/textView10"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="82dp"
-        android:layout_marginEnd="82dp"
+        android:layout_marginStart="181dp"
+        android:layout_marginTop="14dp"
         android:text="@string/paraules"
-        app:layout_constraintBottom_toTopOf="@+id/paraulatext"
-        app:layout_constraintEnd_toEndOf="@+id/acerts"
-        app:layout_constraintStart_toStartOf="@+id/paraulatext" />
+        android:textColor="@color/white"
+        android:textColorHint="@color/white"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
     <EditText
         android:id="@+id/editLletra"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="78dp"
-        android:layout_marginEnd="3dp"
+        android:layout_marginStart="100dp"
+        android:layout_marginTop="17dp"
         android:ems="10"
         android:hint="@string/lletra"
         android:inputType="textPersonName"
-        app:layout_constraintEnd_toEndOf="@+id/acerts"
-        app:layout_constraintTop_toBottomOf="@+id/textView5" />
+        android:minHeight="48dp"
+        android:textColor="@color/white"
+        android:textColorHint="@color/white"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/acerts" />
 
     <TextView
         android:id="@+id/intents"
-        android:layout_width="0dp"
+        android:layout_width="100dp"
         android:layout_height="39dp"
         android:layout_marginStart="94dp"
-        android:layout_marginEnd="15dp"
+        android:layout_marginTop="12dp"
         android:textAlignment="center"
-        app:layout_constraintBaseline_toBaselineOf="@+id/acerts"
-        app:layout_constraintEnd_toStartOf="@+id/acerts"
-        app:layout_constraintStart_toStartOf="parent" />
+        android:textColor="@color/white"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
     <TextView
         android:id="@+id/paraulatext"
         android:layout_width="216dp"
         android:layout_height="35dp"
-        android:layout_marginTop="34dp"
-        android:layout_marginBottom="34dp"
-        app:layout_constraintBottom_toBottomOf="@+id/textView5"
-        app:layout_constraintEnd_toStartOf="@+id/textView6"
-        app:layout_constraintStart_toStartOf="@+id/textView6"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+        android:layout_marginStart="101dp"
+        android:textAlignment="center"
+        android:textColor="@color/white"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView10" />
 
     <TextView
         android:id="@+id/textView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="14dp"
+        android:layout_marginStart="64dp"
+        android:layout_marginTop="13dp"
         android:text="@string/acerts"
-        app:layout_constraintBottom_toTopOf="@+id/acerts"
-        app:layout_constraintStart_toStartOf="@+id/acerts" />
+        android:textColor="@color/white"
+        app:layout_constraintStart_toEndOf="@+id/textView5"
+        app:layout_constraintTop_toBottomOf="@+id/paraulatext" />
 
     <TextView
         android:id="@+id/textUsuari2"
         android:layout_width="247dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="73dp"
-        android:layout_marginTop="27dp"
-        android:layout_marginEnd="73dp"
-        android:layout_marginBottom="16dp"
+        android:layout_height="36dp"
+        android:layout_marginStart="82dp"
+        android:layout_marginTop="28dp"
         android:text="@string/usuari"
         android:textAlignment="center"
-        android:textSize="24dp"
-        app:layout_constraintBottom_toTopOf="@+id/textpartida"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.478"
+        android:textColor="@color/white"
+        android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="217dp"
         android:layout_height="135dp"
-        android:layout_marginTop="127dp"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginStart="97dp"
+        android:layout_marginTop="12dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textpartida"
         app:srcCompat="@drawable/ahorcado_1_png" />
 
     <TextView
         android:id="@+id/textpartida"
         android:layout_width="240dp"
-        android:layout_height="0dp"
-        android:layout_marginBottom="616dp"
+        android:layout_height="36dp"
+        android:layout_marginStart="85dp"
+        android:layout_marginTop="15dp"
         android:textAlignment="center"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:textColor="@color/white"
+        android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textUsuari2" />
 
