--- a/PenjatFirebase2/app/src/main/res/layout/fragment_login.xml
+++ b/PenjatFirebase2/app/src/main/res/layout/fragment_login.xml
@@ -4,31 +4,38 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white">
+    android:background="@color/white"
+    android:backgroundTint="@color/background_green">
 
     <Button
         android:id="@+id/buttonLogin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="70dp"
+        android:backgroundTint="@color/background_ligth_green"
         android:text="@string/login"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toTopOf="@+id/buttonRegistre"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editClau" />
+        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
+        app:layout_constraintVertical_bias="1.0" />
 
     <Button
         android:id="@+id/buttonRegistre"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="208dp"
         android:layout_marginBottom="80dp"
+        android:backgroundTint="@color/background_ligth_green"
         android:text="@string/registre"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.501"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editClau" />
+        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
+        app:layout_constraintVertical_bias="0.924" />
 
     <EditText
         android:id="@+id/editUsuari"
@@ -37,29 +44,15 @@
         android:layout_marginEnd="101dp"
         android:layout_marginBottom="42dp"
         android:ems="10"
+        android:hint="@string/usuari"
         android:inputType="textPersonName"
         android:minHeight="48dp"
-        android:hint="@string/usuari"
-        android:textColor="@color/gray"
+        android:textColor="@color/white"
+        android:textColorHint="@color/white"
         app:layout_constraintBottom_toTopOf="@+id/textView3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/textView2"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
-
-    <EditText
-        android:id="@+id/editClau"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="100dp"
-        android:layout_marginBottom="90dp"
-        android:ems="10"
-        android:inputType="textPassword"
-        android:minHeight="48dp"
-        app:layout_constraintBottom_toTopOf="@+id/buttonLogin"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/textView3"
-        app:layout_constraintTop_toBottomOf="@+id/textView3"
-        tools:ignore="SpeakableTextPresentCheck" />
 
     <TextView
         android:id="@+id/textView"
@@ -68,7 +61,7 @@
         android:layout_marginTop="89dp"
         android:layout_marginBottom="85dp"
         android:text="@string/benvingut"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         android:textSize="34sp"
         app:layout_constraintBottom_toTopOf="@+id/textView2"
         app:layout_constraintEnd_toEndOf="parent"
@@ -82,7 +75,7 @@
         android:layout_marginStart="100dp"
         android:layout_marginTop="84dp"
         android:text="@string/usuari"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
@@ -93,8 +86,27 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="42dp"
         android:text="@string/clau"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="@+id/editUsuari"
         app:layout_constraintTop_toBottomOf="@+id/editUsuari" />
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/textInputLayout"
+        android:layout_width="208dp"
+        android:layout_height="57dp"
+        android:layout_marginStart="101dp"
+        app:endIconMode="password_toggle"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView3">
+
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/editClau"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/background_green"
+            android:inputType="textPassword"
+            tools:ignore="SpeakableTextPresentCheck" />
+    </com.google.android.material.textfield.TextInputLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
