--- a/PenjatFirebase2/app/src/main/res/values/colors.xml
+++ b/PenjatFirebase2/app/src/main/res/values/colors.xml
@@ -8,4 +8,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="gray">#808080</color>
+    <color name="background_green">#1E5721</color>
+    <color name="background_ligth_green">#14C51E</color>
 </resources>
