--- a/PenjatFirebase2/app/src/main/res/layout/activity_joc.xml
+++ b/PenjatFirebase2/app/src/main/res/layout/activity_joc.xml
@@ -75,6 +75,7 @@
         android:ems="10"
         android:hint="@string/lletra"
         android:inputType="textPersonName"
+        android:maxLength="1"
         android:minHeight="48dp"
         android:textColor="@color/white"
         android:textColorHint="@color/white"
