--- a/PenjatFirebase2/app/src/main/res/layout/fragment_ranking.xml
+++ b/PenjatFirebase2/app/src/main/res/layout/fragment_ranking.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white">
+    android:background="@color/background_ligth_green">
 
     <TextView
         android:id="@+id/textView8"
@@ -14,16 +14,17 @@
         android:layout_marginTop="16dp"
         android:text="@string/ranking_penjat"
         android:textAlignment="center"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         android:textSize="34sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
-        android:layout_width="409dp"
-        android:layout_height="665dp"
-        android:layout_marginStart="1dp"
+        android:layout_width="383dp"
+        android:layout_height="611sp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="40dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView8" />
 </androidx.constraintlayout.widget.ConstraintLayout>
