--- a/PenjatFirebase2/app/src/main/res/values/colors.xml
+++ b/PenjatFirebase2/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="gray">#808080</color>
     <color name="background_green">#1E5721</color>
     <color name="background_ligth_green">#14C51E</color>
+    <color name="marron">#473017</color>
 </resources>
