--- a/PenjatFirebase2/app/src/main/res/layout/activity_recuperar_contrasenya.xml
+++ b/PenjatFirebase2/app/src/main/res/layout/activity_recuperar_contrasenya.xml
@@ -5,54 +5,24 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    android:backgroundTint="@color/background_green">
+    android:backgroundTint="@color/background_green"
+    tools:context=".ui.RecuperarContrasenya">
 
     <Button
-        android:id="@+id/buttonLogin"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="50dp"
-        android:backgroundTint="@color/background_ligth_green"
-        android:text="@string/login"
-        android:textColor="@color/white"
-        app:layout_constraintBottom_toTopOf="@+id/buttonRegistre"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
-        app:layout_constraintVertical_bias="1.0"
-        tools:ignore="TextContrastCheck,TextContrastCheck" />
-
-    <Button
-        android:id="@+id/buttonRegistre"
+        android:id="@+id/buttonContinuar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="120dp"
         android:backgroundTint="@color/background_ligth_green"
-        android:text="@string/registre"
+        android:text="@string/continuar"
         android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
-        app:layout_constraintVertical_bias="0.57"
+        app:layout_constraintVertical_bias="0.924"
         tools:ignore="TextContrastCheck,TextContrastCheck" />
-
-    <Button
-        android:id="@+id/buttonRecuperaContrasenya"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="30dp"
-        android:backgroundTint="@color/background_green"
-        android:text="@string/has_oblidat_la_contrasenya"
-        android:textColor="@color/white"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
-        app:layout_constraintVertical_bias="0.6" />
 
     <EditText
         android:id="@+id/editUsuari"
@@ -62,7 +32,7 @@
         android:layout_marginBottom="42dp"
         android:ems="10"
         android:hint="@string/usuari"
-        android:inputType="textEmailAddress"
+        android:inputType="textPersonName"
         android:minHeight="48dp"
         android:textColor="@color/white"
         android:textColorHint="@color/white"
@@ -70,17 +40,18 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/textView2"
         app:layout_constraintTop_toBottomOf="@+id/textView2"
-        tools:ignore="DuplicateSpeakableTextCheck"/>
+        tools:ignore="DuplicateSpeakableTextCheck,DuplicateSpeakableTextCheck"
+        android:importantForAutofill="no" />
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="89dp"
         android:layout_marginBottom="85dp"
-        android:text="@string/benvingut"
+        android:text="@string/has_oblidat_la_contrasenya"
         android:textColor="@color/white"
-        android:textSize="34sp"
+        android:textSize="30sp"
         app:layout_constraintBottom_toTopOf="@+id/textView2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -91,7 +62,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="100dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="84dp"
         android:text="@string/usuari"
         android:textColor="@color/white"
         android:textStyle="bold"
@@ -128,36 +99,33 @@
             tools:ignore="SpeakableTextPresentCheck" />
     </com.google.android.material.textfield.TextInputLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="90dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="48dp"
-        android:orientation="horizontal"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+    <TextView
+        android:id="@+id/textView7"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="29dp"
+        android:text="@string/repeteix_la_clau"
+        android:textColor="@color/white"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="@+id/textInputLayout"
+        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/textRepeteixInputLayout"
+        android:layout_width="209dp"
+        android:layout_height="55dp"
+        android:layout_marginStart="102dp"
+        app:endIconMode="password_toggle"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/buttonRecuperaContrasenya">
+        app:layout_constraintTop_toBottomOf="@+id/textView7">
 
-        <ImageButton
-            android:id="@+id/buttonCat"
-            android:layout_width="100dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:background="@drawable/ic_flag_of_catalonia" />
 
-        <ImageButton
-            android:id="@+id/buttonEsp"
-            android:layout_width="100dp"
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/editRepeteixClau"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:background="@drawable/ic_bandera_de_espa_a" />
-
-        <ImageButton
-            android:id="@+id/buttonEn"
-            android:layout_width="100dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:background="@drawable/ic_flag_of_the_united_kingdom__3_5_" />
-    </LinearLayout>
+            android:background="@color/background_green"
+            android:inputType="textPassword"
+            tools:ignore="SpeakableTextPresentCheck" />
+    </com.google.android.material.textfield.TextInputLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
